test(ocaml): Add inline unit tests and enable OCaml CI (#49)
We're using the OCaml 5.0 beta compiler on CI because we're bumping up
against this issue: https://github.com/ocaml/ocaml/issues/11489 and the
fix isn't released yet.

--- a/ocaml/lib/dune
+++ b/ocaml/lib/dune
@@ -1,5 +1,8 @@
 (library
  (name extism)
  (public_name extism)
+ (inline_tests
+  (deps test/code.wasm))
  (libraries ctypes.foreign bigstringaf base64)
- (preprocess (pps ppx_yojson_conv)))
+ (preprocess
+  (pps ppx_yojson_conv ppx_inline_test)))
