refactor(ocaml): Cleanup code, split out extism-manifest package, prepare to release with next runtime release (#182)

--- a/ocaml/lib/dune
+++ b/ocaml/lib/dune
@@ -3,6 +3,6 @@
  (public_name extism)
  (inline_tests
   (deps test/code.wasm))
- (libraries ctypes.foreign bigstringaf base64)
+ (libraries ctypes.foreign bigstringaf extism-manifest)
  (preprocess
   (pps ppx_yojson_conv ppx_inline_test)))
