--- a/ocaml/manifest/dune
+++ b/ocaml/manifest/dune
@@ -1,6 +1,7 @@
 (library
  (name extism_manifest)
  (public_name extism-manifest)
+ (inline_tests)
  (libraries base64)
  (preprocess
-  (pps ppx_yojson_conv)))
+  (pps ppx_yojson_conv ppx_inline_test)))
