--- a/extism-manifest.opam
+++ b/extism-manifest.opam
@@ -7,12 +7,13 @@ authors: ["Extism Authors <oss@extism.org>"]
 license: "BSD-3-Clause"
 tags: ["topics" "wasm" "plugin"]
 homepage: "https://github.com/extism/extism"
-doc: "https://extism.org"
+doc: "https://github.com/extism/extism"
 bug-reports: "https://github.com/extism/extism/issues"
 depends: [
   "ocaml" {>= "4.14.1"}
   "dune" {>= "3.2" & >= "3.2"}
   "ppx_yojson_conv" {>= "0.15.0"}
+  "ppx_inline_test" {>= "0.15.0"}
   "base64" {>= "3.5.0"}
   "odoc" {with-doc}
 ]
