--- a/extism.opam
+++ b/extism.opam
@@ -19,6 +19,7 @@ depends: [
   "extism-manifest" {= version}
   "ppx_inline_test" {>= "v0.15.0"}
   "cmdliner" {>= "1.1.1"}
+  "uuidm" {>= "0.9.0"}
   "odoc" {with-doc}
 ]
 build: [
