--- a/ocaml/lib/dune
+++ b/ocaml/lib/dune
@@ -3,6 +3,6 @@
  (public_name extism)
  (inline_tests
   (deps test/code.wasm test/code-functions.wasm))
- (libraries ctypes.foreign bigstringaf extism-manifest)
+ (libraries ctypes.foreign bigstringaf extism-manifest uuidm)
  (preprocess
   (pps ppx_yojson_conv ppx_inline_test)))
