feat(ocaml): add missing flags to `extism-call` executable (#451)
`extism-call` is a test program using the OCaml SDK, this PR adds the
missing flags to make it a little more useful for general testing/

--- a/ocaml/Makefile
+++ b/ocaml/Makefile
@@ -1,6 +1,8 @@
 VERSION?=0.4.0
 TAG?=0.5.0
 
+PREFIX?=$$HOME/.local
+
 build:
 	dune build
 
@@ -14,3 +16,6 @@ prepare:
 
 publish:
 	opam publish -v $(VERSION) https://github.com/extism/extism/archive/refs/tags/v$(TAG).tar.gz ..
+
+install-cli: build
+	install ../_build/default/ocaml/bin/main.exe "$(PREFIX)/bin/extism-call"
