--- a/.github/actions/libextism/action.yml
+++ b/.github/actions/libextism/action.yml
@@ -23,7 +23,7 @@ runs:
       uses: actions/upload-artifact@v2
       with:
         name: libextism-so-artifact
-        path: /usr/local/lib/libextism.so /usr/local/lib/libextism.dylib
+        path: /usr/local/lib/libextism.*
     - name: Upload libextism.h
       uses: actions/upload-artifact@v2
       with:
