--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Setup OCaml env
         uses: ocaml/setup-ocaml@v2
         with:
-          ocaml-compiler: ocaml-base-compiler.5.0.0
+          dune-cache: true
       - name: Build OCaml Host SDK
         run: |
           opam install -y --deps-only .
