--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,6 +40,7 @@ jobs:
         uses: ocaml/setup-ocaml@v2
         with:
           dune-cache: true
+          ocaml-compiler: "5.x"
       - name: Build OCaml Host SDK
         run: |
           opam install -y --deps-only .
