--- a/.github/actions/libextism/action.yml
+++ b/.github/actions/libextism/action.yml
@@ -1,31 +1,32 @@
 on: [workflow_call]
 
 name: libextism
-description: Installs Extism runtime from git
 
 runs:
   using: composite
   steps:
-    - uses: actions/checkout@v3
-    - uses: actions-rs/toolchain@v1
+    - name: Checkout sources
+      uses: actions/checkout@v3
+      with:
+        repository: extism/extism
+    - name: Install Rust
+      uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
-    - uses: actions/setup-python@v4
+        override: true
+    - name: Cache Rust environment
+      uses: Swatinem/rust-cache@v1
+    - name: Cache libextism
+      id: cache-libextism
+      uses: actions/cache@v3
       with:
-        python-version: '3.10' 
-    - name: Install Extism
+        path: target/**
+        key: ${{ runner.os }}-libextism-${{ hashFiles('runtime/**') }}-${{ hashFiles('manifest/**') }}-${{ hashFiles('libextism/**') }}
+    - name: Build
+      if: steps.cache-libextism.outputs.cache-hit != 'true'
+      shell: bash
+      run: cargo build --release -p libextism
+    - name: Install extism shared library
       shell: bash
       run: |
-          pip install poetry
-          pip install git+https://github.com/extism/cli
-          extism install git
-    - name: Upload libextism.so
-      uses: actions/upload-artifact@v2
-      with:
-        name: libextism-so-artifact
-        path: /usr/local/lib/libextism.*
-    - name: Upload libextism.h
-      uses: actions/upload-artifact@v2
-      with:
-        name: libextism-h-artifact
-        path: /usr/local/include/extism.h
+        sudo make install
