--- a/.github/actions/libextism/action.yml
+++ b/.github/actions/libextism/action.yml
@@ -21,7 +21,7 @@ runs:
       id: cache-libextism
       uses: actions/cache@v3
       with:
-        path: target/**
+        path: runtime/target/**
         key: ${{ runner.os }}-libextism-${{ hashFiles('runtime/**') }}
     - name: Build
       if: steps.cache-libextism.outputs.cache-hit != 'true'
