ci: add shell field to action

--- a/.github/actions/libextism/action.yml
+++ b/.github/actions/libextism/action.yml
@@ -11,4 +11,5 @@ runs:
         path: extism-cli
     - uses: ./.extism-cli/.github/actions/extism-cli
     - name: Install
+      shell: bash
       run: sudo extism install --version git
