--- a/.github/actions/libextism/action.yml
+++ b/.github/actions/libextism/action.yml
@@ -8,7 +8,7 @@ runs:
     - uses: actions/checkout@v3
       with:
         repository: extism/cli
-        path: extism-cli
+        path: .extism-cli
     - uses: ./.extism-cli/.github/actions/extism-cli
     - name: Install
       shell: bash
