doc: cleanup docs a little

--- a/.github/actions/libextism/action.yml
+++ b/.github/actions/libextism/action.yml
@@ -13,3 +13,5 @@ runs:
     - name: Install
       shell: bash
       run: sudo extism lib install --version git
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
