--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,20 +11,33 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
+        compiler: [ "5.1" ]
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3
       - uses: ./.github/actions/libextism
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
       - name: Setup OCaml env
         uses: ocaml/setup-ocaml@v2
         with:
           dune-cache: true
-          ocaml-compiler: "5.x"
+          ocaml-compiler: ${{ matrix.compiler }}
+      - run: opam exec -- ocamlc -version > .ocaml-version
+      - name: Cache OCaml
+        id: cache-ocaml
+        uses: actions/cache@v3
+        with:
+          path: _opam
+          key: ${{ runner.os }}-opam-${{ hashFiles('*.opam') }}-${{ hashFiles('dune-project') }}-${{ hashFiles('.ocaml-version') }}
       - name: Build OCaml Host SDK
+        if: steps.cache-ocaml.outputs.cache-hit != 'true'
         run: |
+          opam upgrade -y
           opam install -y --deps-only .
           LD_LIBRARY_PATH=/usr/local/lib opam exec -- dune build
       - name: Test OCaml Host SDK
         run: |
+          opam upgrade -y
           LD_LIBRARY_PATH=/usr/local/lib opam exec -- dune exec ./bin/main.exe wasm/code.wasm count_vowels -- --input "qwertyuiop"
           LD_LIBRARY_PATH=/usr/local/lib opam exec -- dune runtest
