doc: improve formatting

--- a/dune
+++ b/dune
@@ -1,6 +1,5 @@
 (dirs :standard \ runtime)
 
 (mdx
-	(libraries extism-manifest extism yojson)
-	(deps wasm/code-functions.wasm)
-)
+ (libraries extism-manifest extism yojson)
+ (deps wasm/code-functions.wasm))
