--- a/dune
+++ b/dune
@@ -1,5 +1,6 @@
 (dirs :standard \ runtime)
 
 (mdx
+ (package extism)
  (libraries extism-manifest extism yojson)
  (deps wasm/code-functions.wasm))
