--- a/extism.opam
+++ b/extism.opam
@@ -20,6 +20,7 @@ depends: [
   "ppx_inline_test" {>= "v0.15.0"}
   "cmdliner" {>= "1.1.1"}
   "uuidm" {>= "0.9.0"}
+  "mdx" {>= "2.0.0" & with-test}
   "odoc" {with-doc}
 ]
 build: [
