--- a/extism.opam
+++ b/extism.opam
@@ -40,3 +40,6 @@ build: [
 dev-repo: "git+https://github.com/extism/ocaml-sdk.git"
 build-env: [EXTISM_TEST_NO_LIB = ""]
 post-messages: ["See https://extism.org/docs/install/ for information about installing libextism"]
+pin-depends: [
+  [ "mdx" "git+https://github.com/realworldocaml/mdx#9586620d81c923b98819042f67a8ce664b2552ac" ]
+]
