--- a/lib/dune
+++ b/lib/dune
@@ -2,7 +2,7 @@
  (name extism)
  (public_name extism)
  (inline_tests
-  (deps test/code.wasm test/code-functions.wasm))
+  (deps test/code.wasm test/code-functions.wasm test/loop.wasm))
  (libraries ctypes.foreign bigstringaf extism-manifest uuidm)
  (preprocess
   (pps ppx_yojson_conv ppx_inline_test)))
