--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,10 +7,20 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 
 jobs:
   deploy-doc:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout tree
@@ -22,16 +32,19 @@ jobs:
           dune-cache: true
           ocaml-compiler: "5.x"
 
-      - run: opam install . --deps-only --with-doc
+      - run: opam install . --deps-only --with-test --with-doc
         shell: bash
       - run: opam depext --install odoc
         shell: bash
       - run: opam exec -- dune build @doc
         shell: bash
-      - name: Deploy odoc to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ github.token }}
-          publish_dir: "_build/default/_doc/_html"
-          destination_dir: ""
 
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: '_build/default/_doc/_html'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
