--- a/extism.opam.template
+++ b/extism.opam.template
@@ -1,2 +1,2 @@
-build-env: [EXTISM_TEST_NO_LIB = ""]
+build-env: [EXTISM_TEST_NO_LIB = "1"]
 post-messages: ["See https://extism.org/docs/install/ for information about installing libextism"]
